--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "console.table": "^0.10.0",
     "dotenv": "^10.0.0",
+    "figlet": "^1.8.0",
     "inquirer": "^8.1.2",
     "mysql2": "^2.3.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
